--- a/realworld/src/main/resources/application.properties
+++ b/realworld/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/realworld
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+spring.jpa.show-sql: true
+
+#path
+server.servlet.context-path=/api
+
+#schema
