--- a/realworld/src/main/resources/application.properties
+++ b/realworld/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/realworld
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/realworld
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+#spring.jpa.show-sql: true
 
 #path
 server.servlet.context-path=/api
