--- a/realworld/src/main/resources/application.properties
+++ b/realworld/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/realworld
+spring.datasource.url=jdbc:mysql://${DB_HOST}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
