--- a/render.yaml
+++ b/render.yaml
@@ -9,14 +9,8 @@ services:
     healthCheckPath: /
     envVars:
       - key: DB_URL
-      - fromDatabase:
-          name: prod
-          property: host
+      - sync: false
       - key: DB_USER
-      - fromDatabase:
-          name: prod
-          property: user
+      - sync: false
       - key: DB_PASSWORD
-      - fromDatabase:
-          name: prod
-          property: password
+      - sync: false
